--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,19 @@ h1 {
 
 h1 {
     margin: 0 auto;
-    font-size: 60px !important;
+    font-size: 80px !important;
+}
+
+h1 img {
+    padding-bottom: 35px;
 }
 
 .filter {
     background-color: rgba(0, 0, 0, 0.4);
     height: 100%;
     padding-top: 600px;
+}
+
+.row {
+    margin: 0 !important;
 }
