--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,12 @@ body {
     background-position: bottom center;
 }
 
-h1 {
+h1, .active {
     color: #fff !important;
+}
+
+.active {
+    text-decoration: underline;
 }
 
 h1 {
@@ -39,7 +43,7 @@ h1 img {
     margin: 0 !important;
 }
 
-.upper {
+.upper, nav a {
     text-transform: uppercase;
 }
 
@@ -47,4 +51,30 @@ h1 img {
     padding: 10px 20px;
     font-weight: 700;
     font-size: 18px;
+}
+
+nav ul {
+    list-style-type: none;
+    justify-content: flex-end;
+    padding-top: 16px;
+}
+
+nav a {
+    text-decoration: none;
+    color: #000;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+nav li {
+    padding-left: 50px;
+}
+
+.navBar {
+    position: sticky;
+    top: 0;
+    background-color: #6da87d;
+    padding-top: 5px;
+    padding-bottom: -3px;
+    border-bottom: 3px solid #3d3d3d;
 }
