--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Merriweather", serif;
     font-weight: 400;
@@ -10,13 +14,13 @@ body {
 
 .slider {
     background-image: url("../images/banner.jpg");
-    height: 850px;
+    height: 900px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom center;
 }
 
-h1, .active {
+.slogen, .active {
     color: #fff !important;
 }
 
@@ -24,12 +28,15 @@ h1, .active {
     text-decoration: underline;
 }
 
-h1 {
-    margin: 0 auto;
+.slogen {
     font-size: 80px !important;
 }
 
-h1 img {
+.slogen, figcaption {
+    margin: 0 auto;
+}
+
+.slogen img {
     padding-bottom: 35px;
 }
 
@@ -82,15 +89,22 @@ h1 img {
 }
 
 .order-b .btn {
-    padding: 10px 20px;
+    padding: 10px 30px;
     font-weight: 700;
     font-size: 18px;
 }
 
+.slogen {
+    font-weight: 500;
+}
+
 nav ul {
-    list-style-type: none;
     justify-content: flex-end;
     padding-top: 16px;
+}
+
+nav ul, .us ul {
+    list-style-type: none;
 }
 
 nav a {
@@ -113,3 +127,50 @@ nav li {
     border-bottom: 3px solid #3d3d3d;
 }
 
+.text {
+    font-size: 20px;
+    margin-bottom: 80px;
+}
+
+.us {
+    margin-top: 50px;
+}
+
+h1 {
+    padding-bottom: 25px;
+}
+
+figure img {
+    height: 300px;
+    object-fit: cover;
+}
+
+figure {
+    margin: 0 10px !important;
+}
+
+figure, figure img, figcaption {
+    width: 415px;
+}
+
+figcaption {
+    text-align: center;
+    font-size: 18px;
+    background-color: #fafafa;
+    padding: 15px;
+    height: 130px;
+    font-weight: 300;
+}
+
+.map {
+    margin-top: 150px;
+}
+
+.map h2 {
+    margin-bottom: 30px;
+}
+
+iframe {
+    width: 100%;
+    height: 800px;
+}
