--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 html {
     scroll-behavior: smooth;
@@ -103,15 +104,21 @@ nav ul {
     padding-top: 16px;
 }
 
-nav ul, .us ul {
+nav ul, .us ul, .lists ul {
     list-style-type: none;
 }
 
 nav a {
-    text-decoration: none;
-    color: #000;
     font-size: 20px;
     font-weight: 600;
+}
+
+nav a, .lists a {
+    text-decoration: none;
+}
+
+footer, nav a, .lists ul li:first-of-type {
+    color: #000 !important;
 }
 
 nav li {
@@ -121,10 +128,13 @@ nav li {
 .navBar {
     position: sticky;
     top: 0;
-    background-color: #6da87d;
     padding-top: 15px;
     padding-bottom: -3px;
     border-bottom: 3px solid #3d3d3d;
+}
+
+.navBar, footer {
+    background-color: #6da87d;
 }
 
 .text {
@@ -173,4 +183,32 @@ figcaption {
 iframe {
     width: 100%;
     height: 800px;
+}
+
+footer {
+    margin-top: 130px;
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
+
+.lists {
+    justify-content: space-between;
+}
+
+.lists ul li:first-of-type {
+    padding-bottom: 20px;
+    font-size: 22px;
+}
+
+.lists ul li {
+    padding-bottom: 10px;
+}
+
+.lists ul li, .lists a {
+    color: #e6e6e6;
+}
+
+.lists ul:last-of-type li a {
+    padding-right: 35px;
+    font-size: 30px;
 }
