--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,4 +3,8 @@
         flex-direction: column;
         align-items: center;
     }
+
+    .navBar .logo p {
+        text-align: center;
+    }
 }
