--- a/css/style.css
+++ b/css/style.css
@@ -309,3 +309,12 @@ footer {
     height: 800px;
   }
 
+
+.americano .card-body {
+    height: 199px;
+}
+
+
+.americano .btn-custom {
+    margin-top: 25px;
+}
