--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,10 +1,23 @@
-@media only screen and (max-width: 1400px) {
-    .us ul {
+@media only screen and (max-width: 1399px) {
+    .us ul, nav ul {
         flex-direction: column;
         align-items: center;
     }
 
+    nav ul {
+        padding: 0;
+        margin-left: -40px;
+    }
+
     .navBar .logo p {
         text-align: center;
+    }
+
+    .slider {
+        height: 950px;
+    }
+
+    .card-body {
+        height: 199px;
     }
 }
